# mkw-ladder-api

./: .gitignore  ladder.db  main.py  pyproject.toml
ladderapiproject/: ladder.db  manage.py
ladderapiproject/api/: models.py
ladderapiproject/api/migrations/: 0001_initial.py  0002_remove_eventplayerdata_unique_event_player_and_more.py
ladderapiproject/ladderapiproject/: asgi.py  settings.py  urls.py  wsgi.py
